--- a/public/docketing_layout/css/style.css
+++ b/public/docketing_layout/css/style.css
@@ -54,6 +54,7 @@ body {
   background-repeat: no-repeat;
   background-position: top right;
   background-size: 60% 100%;
+  height: 100%;
 }
 
 .sub_page .hero_area {
@@ -287,6 +288,7 @@ a:focus {
 /*end header section*/
 /* slider section */
 .slider_section {
+  margin-top: auto;
   padding: 75px 0;
   color: #0b0b0b;
 }
