--- a/public/docketing_layout/css/style.css
+++ b/public/docketing_layout/css/style.css
@@ -288,7 +288,7 @@ a:focus {
 /*end header section*/
 /* slider section */
 .slider_section {
-  margin-top: auto;
+  margin-top: 10;
   padding: 75px 0;
   color: #0b0b0b;
 }
