--- a/public/admin_dashboard_assets/plugins/simplebar/css/simplebar.css
+++ b/public/admin_dashboard_assets/plugins/simplebar/css/simplebar.css
@@ -54,7 +54,7 @@
     visibility:visible;
     max-width:100%;
     max-height:100%;
-    background-color:white;
+    background-color:white !important;
     scrollbar-width:none;
     -ms-overflow-style:none
 }
